@@ -12,8 +12,8 @@ Balance: <b>{TOTAL_BTC}</b> BTC in <b>{UNSPENT_OUTS}</b> outputs (<a href="balan
 <br>
 Wallet filename: <b class="mono"><!--WALLET_FILENAME--></b><br>
 <br>
-Quick wallet switch: <!--ONEWALLET-->
-<i>(loading a new wallet may take a few seconds)</i><br>
+Switch wallet: <!--ONEWALLET-->
+<br>
 
 <hr>
 <div id="showwal">
