@@ -2,6 +2,7 @@
 * Added "Load TX" to the top menu in WebUI
 * Fix: after changing a label in a wallet file it get changed in the unspent list as well
 * Fix: the list of unspent outputs is now being sorted properly (by block height)
+* Allow for hidden wallets (start filename with ".") and a nested sub-wallets (up to 3 levels deep)
 
 0.8.5
 * From now on every "payment.zip" contains also the unsigned raw transaction file ("tx2sign.txt")
